kubernetes/front-back-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: backend-farm
 labels:
   app: backend-farm
spec:
 replicas: 1
 selector:
   matchLabels:
     app: backend-farm
 template:
   metadata:
     labels:
       app: backend-farm
   spec:
     containers:
     - name: fastapibackend-farm
       image : alexandremouzouni/backend:1
       imagePullPolicy: Always
       ports:
       - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
 name: fastapi-service
 labels:
   app: backend-farm
spec:
 type: ClusterIP
 selector:
   app: backend-farm
 ports:
 - port: 8000
   targetPort: 8000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-react-app
  template:
    metadata:
      labels:
        app: my-react-app
    spec:
      containers:
        - name: my-react-app-farm
          image: alexandremouzouni/frontend:1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: my-react-service
spec:
  type: NodePort
  selector:
    app: my-react-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000
