kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: my-react-app.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-react-service
                port:
                  number: 3000
